# Media-Trends-Analyser

./: .env.example  README.md  docker-compose.yml
services/agent-service/: Dockerfile  README.md  pyproject.toml
services/agent-service/app/: main.py
services/agent-service/app/agents/: __init__.py  agent_config.py  summary_agent.py
services/agent-service/app/core/: agent_config.py
services/agent-service/app/database/: database.py
services/agent-service/app/models/: __init__.py  article.py  daily_summary.py  viev_daily_summary.py
services/agent-service/app/schemas/: __init__.py  article.py  daily_summary.py  period_summary.py  periodic_summary.py  summary.py  task_status.py
services/agent-service/app/services/: summary_service.py  task_service.py
services/agent-service/tests/: conftest.py  test_agents.py  test_api_daily_summary.py  test_api_periodic_summary.py  test_main.py  test_summary_agent.py  test_summary_service.py  test_task_service.py
services/data-scraper-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/data-scraper-service/app/: main.py
services/data-scraper-service/app/core/: config.json  config.py
services/data-scraper-service/app/models/: articles.py
services/data-scraper-service/app/schemas/: articles.py
services/data-scraper-service/app/scrapers/: __init__.py  api_scraper.py  base_scraper.py  rss_scraper.py
services/data-scraper-service/tests/: conftest.py  test_api_scrapper.py  test_article_service.py  test_articles_api.py  test_db_service.py  test_parser.py  test_rss_scraper.py  test_scrapers.py
(+141 files in other folders)
