[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "langchain-core>=1.0.7",
    "langchain-google-genai>=3.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "json-repair>=0.55.0",
]
