[project]
name = "data-scrapper-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.12.4",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "requests-mock>=1.12.1",
]
